--- a/k8s/grafana/grafana/generated.yaml
+++ b/k8s/grafana/grafana/generated.yaml
@@ -243,6 +243,13 @@ spec:
               value: http://localhost:3000/api/admin/provisioning/datasources/reload
             - name: REQ_METHOD
               value: POST
+          resources:
+            limits:
+              cpu: 100m
+              memory: 250Mi
+            requests:
+              cpu: 10m
+              memory: 100Mi
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
@@ -315,6 +322,13 @@ spec:
             httpGet:
               path: /api/health
               port: 3000
+          resources:
+            limits:
+              cpu: 1
+              memory: 1Gi
+            requests:
+              cpu: 250m
+              memory: 500Mi
       volumes:
         - name: config
           configMap:
