--- a/k8s/grafana/grafana/helm/values.yaml
+++ b/k8s/grafana/grafana/helm/values.yaml
@@ -282,13 +282,13 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
-#  limits:
-#    cpu: 100m
-#    memory: 128Mi
-#  requests:
-#    cpu: 100m
-#    memory: 128Mi
+resources:
+ limits:
+   cpu: 1
+   memory: 1Gi
+ requests:
+   cpu: 250m
+   memory: 500Mi
 
 ## Node labels for pod assignment
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
@@ -829,13 +829,13 @@ sidecar:
     tag: 1.25.2
     sha: ""
   imagePullPolicy: IfNotPresent
-  resources: {}
-#   limits:
-#     cpu: 100m
-#     memory: 100Mi
-#   requests:
-#     cpu: 50m
-#     memory: 50Mi
+  resources:
+    limits:
+      cpu: 100m
+      memory: 250Mi
+    requests:
+      cpu: 10m
+      memory: 100Mi
   securityContext:
     allowPrivilegeEscalation: false
     capabilities:
