--- a/k8s/grafana/grafana/helm/values.yaml
+++ b/k8s/grafana/grafana/helm/values.yaml
@@ -245,12 +245,13 @@ hostAliases: []
   #     - "my.host.com"
 
 ingress:
-  enabled: false
+  enabled: true
   # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
   # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
-  # ingressClassName: nginx
+  ingressClassName: nginx
   # Values can be templated
-  annotations: {}
+  annotations:
+    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   labels: {}
@@ -260,7 +261,7 @@ ingress:
   pathType: Prefix
 
   hosts:
-    - chart-example.local
+    - grafana.zeb17-int.duckdns.org
   ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
   extraPaths: []
   # - path: /*
@@ -277,10 +278,10 @@ ingress:
   #         name: use-annotation
 
 
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+   - secretName: grafana-cert
+     hosts:
+       - grafana.zeb17-int.duckdns.org
 
 resources:
  limits:
