--- a/k8s/grafana/grafana/generated.yaml
+++ b/k8s/grafana/grafana/generated.yaml
@@ -39,7 +39,7 @@ data:
     plugins = /var/lib/grafana/plugins
     provisioning = /etc/grafana/provisioning
     [server]
-    domain = ''
+    domain = grafana.zeb17-int.duckdns.org
 ---
 # Source: grafana/templates/pvc.yaml
 apiVersion: v1
@@ -183,7 +183,7 @@ spec:
         app.kubernetes.io/name: grafana
         app.kubernetes.io/instance: grafana
       annotations:
-        checksum/config: 0e9cbd0ea8e24e32f7dfca5bab17a2ba05652642f0a09a4882833ae88e4cc4a3
+        checksum/config: 01cd2480d582701ca037c8cabcab94acdff290b55985efc37739d585c51a2a5c
         checksum/sc-dashboard-provider-config: 593c0a8778b83f11fe80ccb21dfb20bc46705e2be3178df1dc4c89d164c8cd9c
         kubectl.kubernetes.io/default-container: grafana
     spec:
@@ -339,6 +339,38 @@ spec:
         - name: sc-datasources-volume
           emptyDir:
             {}
+---
+# Source: grafana/templates/ingress.yaml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: grafana
+  namespace: default
+  labels:
+    helm.sh/chart: grafana-7.0.17
+    app.kubernetes.io/name: grafana
+    app.kubernetes.io/instance: grafana
+    app.kubernetes.io/version: "10.2.2"
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+      - grafana.zeb17-int.duckdns.org
+      secretName: grafana-cert
+  rules:
+    - host: grafana.zeb17-int.duckdns.org
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: grafana
+                port:
+                  number: 80
 ---
 # Source: grafana/templates/tests/test-serviceaccount.yaml
 apiVersion: v1
