--- a/k8s/kube-system/kube-state-metrics/servicemonitor.yaml
+++ b/k8s/kube-system/kube-state-metrics/servicemonitor.yaml
@@ -12,7 +12,7 @@ spec:
   endpoints:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
     interval: 30s
-    port: https-metrics
+    port: http-metrics
     scheme: https
     scrapeTimeout: 30s
     tlsConfig:
