--- a/k8s/kube-system/kube-state-metrics/servicemonitor.yaml
+++ b/k8s/kube-system/kube-state-metrics/servicemonitor.yaml
@@ -11,6 +11,7 @@ metadata:
 spec:
   endpoints:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    honorLabels: true
     interval: 30s
     port: http-metrics
     scrapeTimeout: 30s
