add prom-adapter resource confs

--- a/k8s/monitoring/prometheus-adapter/generated.yaml
+++ b/k8s/monitoring/prometheus-adapter/generated.yaml
@@ -413,6 +413,13 @@ spec:
             scheme: HTTPS
           initialDelaySeconds: 30
           timeoutSeconds: 5
+        resources:
+          limits:
+            cpu: 500m
+            memory: 128Mi
+          requests:
+            cpu: 150m
+            memory: 256Mi
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
