--- a/k8s/monitoring/prometheus-adapter/helm/values.yaml
+++ b/k8s/monitoring/prometheus-adapter/helm/values.yaml
@@ -95,13 +95,13 @@ dnsConfig: {}
   #     value: "2"
   #   - name: edns0
 
-resources: {}
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources:
+  requests:
+    cpu: 150m
+    memory: 256Mi
+  limits:
+    cpu: 500m
+    memory: 128Mi
 
 # Configure liveness probe
 # https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#Probe
