--- a/k8s/monitoring/node-exporter/generated.yaml
+++ b/k8s/monitoring/node-exporter/generated.yaml
@@ -126,6 +126,13 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: 100m
+              memory: 50Mi
+            requests:
+              cpu: 10m
+              memory: 30Mi
           volumeMounts:
             - name: proc
               mountPath: /host/proc
