add priority class for node-exporter

--- a/k8s/monitoring/node-exporter/generated.yaml
+++ b/k8s/monitoring/node-exporter/generated.yaml
@@ -84,6 +84,7 @@ spec:
         runAsGroup: 65534
         runAsNonRoot: true
         runAsUser: 65534
+      priorityClassName: observability-daemonset
       serviceAccountName: node-exporter
       containers:
         - name: node-exporter
