--- a/k8s/monitoring/node-exporter/helm/values.yaml
+++ b/k8s/monitoring/node-exporter/helm/values.yaml
@@ -359,7 +359,7 @@ tolerations:
     operator: Exists
 
 ## Assign a PriorityClassName to pods if set
-# priorityClassName: ""
+priorityClassName: "observability-daemonset"
 
 ## Additional container arguments
 ##
