--- a/k8s/metallb-system/metallb/generated.yaml
+++ b/k8s/metallb-system/metallb/generated.yaml
@@ -1906,6 +1906,7 @@ spec:
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
         operator: Exists
+      priorityClassName: "system-cluster-critical"
 ---
 # Source: metallb/templates/controller.yaml
 apiVersion: apps/v1
@@ -1998,6 +1999,7 @@ spec:
             - ALL
       nodeSelector:
         "kubernetes.io/os": linux
+      priorityClassName: "system-cluster-critical"
       volumes:
       - name: cert
         secret:
