--- a/k8s/monitoring/prometheus-adapter/helm/default.yaml
+++ b/k8s/monitoring/prometheus-adapter/helm/default.yaml
@@ -48,7 +48,7 @@ podSecurityContext:
 securityContext:
   allowPrivilegeEscalation: false
   capabilities:
-    drop: ["ALL"]
+    drop: ["all"]
   readOnlyRootFilesystem: true
   runAsNonRoot: true
   runAsUser: 10001
@@ -66,11 +66,6 @@ rbac:
 psp:
   # Specifies whether PSP resources should be created
   create: false
-  # Annotations added to the pod security policy
-  annotations: {}
-  ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
-  ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
-  ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
 
 serviceAccount:
   # Specifies whether a service account should be created
