--- a/ansible/inventory/homelab/homelab.ini
+++ b/ansible/inventory/homelab/homelab.ini
@@ -1,6 +1,6 @@
 rpi01 ansible_host=192.168.0.178 ip=192.168.0.178
 rpi02 ansible_host=192.168.0.196 ip=192.168.0.196
-rpi03 ansible_host=192.168.0.249 ip=192.168.0.249 node_labels={"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true", "nodegroup.zb/persistent-data": "true"}
+rpi03 ansible_host=192.168.0.249 ip=192.168.0.249
 
 [kube_control_plane]
 rpi01
@@ -9,7 +9,7 @@ rpi02
 [kube_node]
 rpi01
 rpi02
-rpi03
+rpi03 node_labels={"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true", "nodegroup.zb/persistent-data": "true"}
 
 [etcd]
 rpi01
