--- a/k8s/monitoring/prometheus-adapter/generated.yaml
+++ b/k8s/monitoring/prometheus-adapter/generated.yaml
@@ -4,13 +4,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter
   namespace: default
 ---
@@ -21,13 +21,13 @@ metadata:
   name: prometheus-adapter
   namespace: default
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
 data:
   config.yaml: |
     rules:
@@ -110,10 +110,10 @@ data:
           )
         resources:
           overrides:
+            instance:
+              resource: node
             namespace:
               resource: namespace
-            node:
-              resource: node
             pod:
               resource: pod
       memory:
@@ -130,10 +130,10 @@ data:
           )
         resources:
           overrides:
+            instance:
+              resource: node
             namespace:
               resource: namespace
-            node:
-              resource: node
             pod:
               resource: pod
       window: 3m
@@ -143,13 +143,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-resource-reader
 rules:
 - apiGroups:
@@ -169,13 +169,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-server-resources
 rules:
 - apiGroups:
@@ -189,13 +189,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-metrics
 rules:
 - apiGroups:
@@ -214,13 +214,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-system-auth-delegator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -236,13 +236,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-resource-reader
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -258,13 +258,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-hpa-controller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -280,13 +280,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-hpa-controller-metrics
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -302,13 +302,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter-auth-reader
   namespace: kube-system
 roleRef:
@@ -325,13 +325,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter
   namespace: default
 spec:
@@ -349,13 +349,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: prometheus-adapter
   namespace: default
 spec:
@@ -372,21 +372,21 @@ spec:
   template:
     metadata:
       labels:        
-        helm.sh/chart: prometheus-adapter-4.9.0
+        helm.sh/chart: prometheus-adapter-4.8.0
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/component: metrics
         app.kubernetes.io/part-of: prometheus-adapter
         app.kubernetes.io/name: prometheus-adapter
         app.kubernetes.io/instance: prometheus-adapter
-        app.kubernetes.io/version: "v0.11.2"
+        app.kubernetes.io/version: "v0.11.1"
       name: prometheus-adapter
       annotations:
-        checksum/config: cd92813a0a50fee33b2aac8096f4c02f1aa21234b57cb223d6700af97f583928
+        checksum/config: f8178a29a62a0f43e65fb9d7d5bdf0e8661f925d95cc442259982137f6e9b134
     spec:
       serviceAccountName: prometheus-adapter
       containers:
       - name: prometheus-adapter
-        image: "registry.k8s.io/prometheus-adapter/prometheus-adapter:v0.11.2"
+        image: "registry.k8s.io/prometheus-adapter/prometheus-adapter:v0.11.1"
         imagePullPolicy: IfNotPresent
         args:
         - /adapter
@@ -442,6 +442,7 @@ spec:
         {}
       topologySpreadConstraints:
         []
+      priorityClassName: 
       securityContext:
         fsGroup: 10001
       tolerations:
@@ -458,13 +459,13 @@ apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: v1beta1.custom.metrics.k8s.io
 spec:
   service:
@@ -481,13 +482,13 @@ apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
   labels:    
-    helm.sh/chart: prometheus-adapter-4.9.0
+    helm.sh/chart: prometheus-adapter-4.8.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: prometheus-adapter
     app.kubernetes.io/name: prometheus-adapter
     app.kubernetes.io/instance: prometheus-adapter
-    app.kubernetes.io/version: "v0.11.2"
+    app.kubernetes.io/version: "v0.11.1"
   name: v1beta1.metrics.k8s.io
 spec:
   service:
