revert prom-adapter + add relabeling for node-exporter

--- a/k8s/monitoring/node-exporter/generated.yaml
+++ b/k8s/monitoring/node-exporter/generated.yaml
@@ -190,3 +190,11 @@ spec:
     - port: metrics
       scheme: http
       scrapeTimeout: 10s
+      relabelings:
+        - action: replace
+          regex: ^(.*)$
+          replacement: $1
+          separator: ;
+          sourceLabels:
+          - __meta_kubernetes_pod_node_name
+          targetLabel: node
