--- a/k8s/monitoring/node-exporter/helm/values.yaml
+++ b/k8s/monitoring/node-exporter/helm/values.yaml
@@ -124,7 +124,13 @@ prometheus:
     attachMetadata:
       node: true
 
-    relabelings: []
+    relabelings:
+    - sourceLabels: [__meta_kubernetes_pod_node_name]
+      separator: ;
+      regex: ^(.*)$
+      targetLabel: node
+      replacement: $1
+      action: replace
     metricRelabelings: []
     interval: ""
     scrapeTimeout: 10s
