--- a/k8s/cert-manager/cert-manager/helm/values.yaml
+++ b/k8s/cert-manager/cert-manager/helm/values.yaml
@@ -63,14 +63,17 @@ strategy: {}
 podDisruptionBudget:
   enabled: false
 
-  # minAvailable and maxUnavailable can either be set to an integer (e.g. 1)
-  # or a percentage value (e.g. 25%)
-  # if neither minAvailable or maxUnavailable is set, we default to `minAvailable: 1`
-  # minAvailable: 1
+  minAvailable: 1
   # maxUnavailable: 1
 
-# Comma separated list of feature gates that should be enabled on the
-# controller pod.
+  # minAvailable and maxUnavailable can either be set to an integer (e.g. 1)
+  # or a percentage value (e.g. 25%)
+
+# Comma separated list of feature gates that should be enabled on the controller
+# Note: do not use this field to pass feature gate values into webhook
+# component as this behaviour relies on a bug that will be fixed in cert-manager 1.13
+# https://github.com/cert-manager/cert-manager/pull/6093
+# Use webhook.extraArgs to pass --feature-gates flag directly instead.
 featureGates: ""
 
 # The maximum number of challenges that can be scheduled as 'processing' at once
@@ -118,29 +121,6 @@ serviceAccount:
 
 # When this flag is enabled, secrets will be automatically removed when the certificate resource is deleted
 enableCertificateOwnerRef: false
-
-# Used to configure options for the controller pod.
-# This allows setting options that'd usually be provided via flags.
-# An APIVersion and Kind must be specified in your values.yaml file.
-# Flags will override options that are set here.
-config:
-#   apiVersion: controller.config.cert-manager.io/v1alpha1
-#   kind: ControllerConfiguration
-#   logging:
-#    verbosity: 2
-#    format: text
-#   leaderElectionConfig:
-#    namespace: kube-system
-#   kubernetesAPIQPS: 9000
-#   kubernetesAPIBurst: 9000
-#   numberOfConcurrentWorkers: 200
-#   featureGates:
-#     additionalCertificateOutputFormats: true
-#     experimentalCertificateSigningRequestControllers: true
-#     experimentalGatewayAPISupport: true
-#     serverSideApply: true
-#     literalCertificateSubject: true
-#     useCertificateRequestBasicConstraints: true
 
 # Setting Nameservers for DNS01 Self Check
 # See: https://cert-manager.io/docs/configuration/acme/dns01/#setting-nameservers-for-dns01-self-check
@@ -237,7 +217,6 @@ prometheus:
     labels: {}
     annotations: {}
     honorLabels: false
-    endpointAdditionalProperties: {}
 
 # Use these variables to configure the HTTP_PROXY environment variables
 # http_proxy: "http://proxy:8080"
@@ -294,11 +273,6 @@ livenessProbe:
   successThreshold: 1
   failureThreshold: 8
 
-# enableServiceLinks indicates whether information about services should be
-# injected into pod's environment variables, matching the syntax of Docker
-# links.
-enableServiceLinks: false
-
 webhook:
   replicaCount: 1
   timeoutSeconds: 10
@@ -336,11 +310,11 @@ webhook:
   podDisruptionBudget:
     enabled: false
 
+    minAvailable: 1
+    # maxUnavailable: 1
+
     # minAvailable and maxUnavailable can either be set to an integer (e.g. 1)
     # or a percentage value (e.g. 25%)
-    # if neither minAvailable or maxUnavailable is set, we default to `minAvailable: 1`
-    # minAvailable: 1
-    # maxUnavailable: 1
 
   # Container Security Context to be set on the webhook component container
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
@@ -504,11 +478,6 @@ webhook:
   volumes: []
   volumeMounts: []
 
-  # enableServiceLinks indicates whether information about services should be
-  # injected into pod's environment variables, matching the syntax of Docker
-  # links.
-  enableServiceLinks: false
-
 cainjector:
   enabled: true
   replicaCount: 1
@@ -529,11 +498,11 @@ cainjector:
   podDisruptionBudget:
     enabled: false
 
+    minAvailable: 1
+    # maxUnavailable: 1
+
     # minAvailable and maxUnavailable can either be set to an integer (e.g. 1)
     # or a percentage value (e.g. 25%)
-    # if neither minAvailable or maxUnavailable is set, we default to `minAvailable: 1`
-    # minAvailable: 1
-    # maxUnavailable: 1
 
   # Container Security Context to be set on the cainjector component container
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
@@ -611,11 +580,6 @@ cainjector:
 
   volumes: []
   volumeMounts: []
-
-  # enableServiceLinks indicates whether information about services should be
-  # injected into pod's environment variables, matching the syntax of Docker
-  # links.
-  enableServiceLinks: false
 
 acmesolver:
   image:
@@ -739,9 +703,4 @@ startupapicheck:
 
   volumes: []
   volumeMounts: []
-
-  # enableServiceLinks indicates whether information about services should be
-  # injected into pod's environment variables, matching the syntax of Docker
-  # links.
-  enableServiceLinks: false
 
