--- a/ansible/inventory/homelab/homelab.ini
+++ b/ansible/inventory/homelab/homelab.ini
@@ -9,7 +9,7 @@ rpi02
 [kube_node]
 rpi01
 rpi02
-rpi03 node_labels={"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true", "nodegroup.zb/persistent-data": "true"}
+rpi03 node_labels='{"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true", "nodegroup.zb/persistent-data": "true"}'
 
 [etcd]
 rpi01
