update longhorn default storage class

--- a/k8s/longhorn-system/longhorn/generated.yaml
+++ b/k8s/longhorn-system/longhorn/generated.yaml
@@ -51,6 +51,8 @@ data:
     
     
     default-replica-count: 1
+    
+    default-longhorn-static-storage-class: longhorn-default
 ---
 # Source: longhorn/templates/storageclass.yaml
 apiVersion: v1
