enable grafana-dashboard sidecar provider

--- a/k8s/grafana/dashboards/kustomization.yaml
+++ b/k8s/grafana/dashboards/kustomization.yaml
@@ -2,6 +2,7 @@ kind: Kustomization
 namespace: grafana
 commonLabels:
   app.zb/name: dashboards
+  grafana_dashboard: 'true'
 
 generatorOptions:
   disableNameSuffixHash: true
