--- a/k8s/grafana/grafana/helm/values.yaml
+++ b/k8s/grafana/grafana/helm/values.yaml
@@ -894,7 +894,7 @@ sidecar:
     # Sets the size limit of the alert sidecar emptyDir volume
     sizeLimit: {}
   dashboards:
-    enabled: false
+    enabled: true
     # Additional environment variables for the dashboards sidecar
     env: {}
     # Do not reprocess already processed unchanged resources on k8s API reconnect.
