add nodeSelector for stateful workloads

--- a/k8s/grafana/grafana/helm/values.yaml
+++ b/k8s/grafana/grafana/helm/values.yaml
@@ -294,7 +294,8 @@ resources:
 ## Node labels for pod assignment
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
 #
-nodeSelector: {}
+nodeSelector:
+  nodegroup.zb/persistent-data: 'true'
 
 ## Tolerations for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
