--- a/k8s/monitoring/prometheus/prometheus.yaml
+++ b/k8s/monitoring/prometheus/prometheus.yaml
@@ -7,6 +7,8 @@ spec:
   externalLabels:
     cluster: homelab
     prom_shard: "$(SHARD)"
+  nodeSelector:
+    nodegroup.zb/persistent-data: 'true'
   podMetadata:
     labels:
       prometheus: main
