--- a/k8s/grafana/grafana/generated.yaml
+++ b/k8s/grafana/grafana/generated.yaml
@@ -404,6 +404,8 @@ spec:
             requests:
               cpu: 250m
               memory: 500Mi
+      nodeSelector:
+        nodegroup.zb/persistent-data: "true"
       volumes:
         - name: config
           configMap:
@@ -510,6 +512,8 @@ metadata:
   namespace: default
 spec:
   serviceAccountName: grafana-test
+  nodeSelector:
+    nodegroup.zb/persistent-data: "true"
   containers:
     - name: grafana-test
       image: "docker.io/bats/bats:v1.4.1"
