--- a/k8s/kargo/kargo/helm/values.yaml
+++ b/k8s/kargo/kargo/helm/values.yaml
@@ -80,6 +80,8 @@ api:
     ## @param api.ingress.annotations Annotations specified by your ingress controller to customize the behavior of the ingress resource.
     annotations:
       cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       # kubernetes.io/ingress.class: nginx
     ## @param api.ingress.ingressClassName From Kubernetes 1.18+, this field is supported if implemented by your ingress controller. When set, you do not need to add the ingress class as annotation.
     ingressClassName: nginx
