--- a/k8s/helm/node-exporter/node-exporter/Chart.yaml
+++ b/k8s/helm/node-exporter/node-exporter/Chart.yaml
@@ -1,5 +1,7 @@
 apiVersion: v2
 name: node-exporter
+type: application
+version: 0.1.0
 dependencies:
   - name: "prometheus-node-exporter"
     version: "4.24.0"
