--- a/k8s/applicationsets.yaml
+++ b/k8s/applicationsets.yaml
@@ -60,6 +60,9 @@ spec:
         repoURL: https://github.com/zbialik/homelab.git
         targetRevision: HEAD
         path: '{{path}}'
+        helm:
+          valueFiles:
+          - values.yaml
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path[2]}}'
