--- a/k8s/applicationsets.yaml
+++ b/k8s/applicationsets.yaml
@@ -50,10 +50,10 @@ spec:
     spec:
       project: default
       syncPolicy:
-        automated:
-          prune: true
-          allowEmpty: true
-          selfHeal: true
+        automated: {}
+          # prune: true
+          # allowEmpty: true
+          # selfHeal: true
         syncOptions:
         - Replace=true
       source:
