--- a/k8s/kargo/node-exporter/stage.yaml
+++ b/k8s/kargo/node-exporter/stage.yaml
@@ -1,7 +1,7 @@
 apiVersion: kargo.akuity.io/v1alpha1
 kind: Stage
 metadata:
-  name: prometheus-node-exporter-dev
+  name: node-exporter-dev
   namespace: kargo-homelab
 spec:
   subscriptions:
