--- a/k8s/kargo/node-exporter/warehouse.yaml
+++ b/k8s/kargo/node-exporter/warehouse.yaml
@@ -1,7 +1,7 @@
 apiVersion: kargo.akuity.io/v1alpha1
 kind: Warehouse
 metadata:
-  name: prometheus-node-exporter
+  name: node-exporter
   namespace: kargo-homelab
 spec:
   subscriptions:
