correct warehouse name ref

--- a/k8s/kargo/node-exporter/stage.yaml
+++ b/k8s/kargo/node-exporter/stage.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kargo-homelab
 spec:
   subscriptions:
-    warehouse: prometheus-node-exporter
+    warehouse: node-exporter
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/zbialik/homelab.git
